--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "hardhat test"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
     "@openzeppelin/contracts": "^5.2.0",
     "@pinata/sdk": "^2.1.0",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -35,11 +36,12 @@
     "pinata": "^0.1.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.57.0",
     "recharts": "^2.15.3",
     "streamifier": "^0.1.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
+    "zod": "^3.25.64"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.8",
