--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "test": "hardhat test"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.9.1",
     "@hookform/resolvers": "^5.1.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@openzeppelin/contracts": "^5.2.0",
     "@pinata/sdk": "^2.1.0",
+    "@prisma/client": "^6.10.0",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -29,8 +32,10 @@
     "formidable": "^3.5.2",
     "framer-motion": "^12.4.10",
     "hardhat": "^2.22.19",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.477.0",
     "next": "15.2.0",
+    "next-auth": "^4.24.11",
     "next-intl": "^3.26.5",
     "next-themes": "^0.4.4",
     "pinata": "^0.1.10",
@@ -56,14 +61,16 @@
     "@typechain/ethers-v6": "^0.5.1",
     "@typechain/hardhat": "^9.1.0",
     "@types/chai": "4.3.20",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/mocha": "^10.0.10",
     "@types/node": "^20.17.22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/streamifier": "^0.1.2",
     "chai": "^4.5.0",
-    "ethers": "^6.13.5",
+    "ethers": "^6.14.4",
     "hardhat-gas-reporter": "^1.0.10",
+    "prisma": "^6.10.0",
     "solidity-coverage": "^0.8.14",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
