--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "compile": "hardhat compile",
     "test": "hardhat test"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
     "@hookform/resolvers": "^5.1.1",
