--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toast": "^1.2.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "formidable": "^3.5.2",
@@ -41,6 +42,7 @@
     "next-auth": "^4.24.11",
     "next-intl": "^3.26.5",
     "next-themes": "^0.4.4",
+    "nuqs": "^2.4.3",
     "pinata": "^0.1.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
